Pointer visibility fix

--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -22,6 +22,7 @@ svg {
 
 .pointer {
   fill: var(--color-text);
+  visibility: hidden;
 }
 
 .text {
